# yugoef

./: .env.example  .gitignore  Dockerfile  README.md  demo.py  pyproject.toml  requirements.txt
docs/: AUDIT.md  CONCEPT.md  ESP32_LOCAL_UPLOAD.md  ESP32_TUTORIAL.md  FEATURE_EXTRACTION.md  FIRMWARE_CONTEXT.md  GAP_ANALYSIS.md  IMPLEMENTATION_PLAN.md  LOCAL_ESP32_CSI_VALIDATION.md  PROTOCOL.md  RUVIEW_REFERENCE_AUDIT.md  SIGNAL_PROCESSING.md  TARGET_ARCHITECTURE.md  UDP_AUTH.md  architecture-alibaba-cloud.html
firmware/esp32-idf/: CMakeLists.txt  sdkconfig.defaults
firmware/esp32-idf/main/: Kconfig.projbuild  main.c
scripts/: deploy-ecs.sh  replay_csi.py
tests/: test_basic.py  test_feature_extraction.py  test_ingestion.py  test_protocol.py  test_protocol_auth.py  test_replay_csi.py  test_signal_processing.py
tests/fixtures/: csi_sequence.json
yugoef/: __init__.py  ai_agent.py  config.py  event_consumer.py  main.py  qwen_client.py
yugoef/feature_extraction/: __init__.py  extractor.py  models.py  motion.py  presence.py  quality.py
yugoef/ingestion/: __init__.py  http_adapter.py  queue.py  service.py  udp_server.py
yugoef/protocol/: __init__.py  constants.py  errors.py  models.py  parser.py  sequence.py  serializer.py
yugoef/signal_processing/: __init__.py  filters.py  iq.py  models.py  normalization.py  phase.py  pipeline.py  subcarriers.py  windows.py
